--- a/bibliographie.bib
+++ b/bibliographie.bib
@@ -14,8 +14,18 @@
     address   = "Cambridge"
 }
  
-@misc{knuthwebsite,
-    author    = "Donald Knuth",
-    title     = "Knuth: Computers and Typesetting",
-    url       = "http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html"
+@book{funktheo,
+    author    = "Folkmar Bornemann",
+    title     = "Funktionentheorie",
+    year      = "2013",
+    publisher = "Birkhäuser",
+    address   = "Basel"
+}
+https://v2.overleaf.com/project/5b918a5cdbde433bfe0f9a05
+@book{funkana,
+    author    = "Dirk Werner",
+    title     = "Funktionalanalysis",
+    year      = "2018",
+    publisher = "Springer Spektrum",
+    address   = "Berlin"
 }
