--- a/Bachelorarbeit.tex
+++ b/Bachelorarbeit.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper]{scrartcl}
+\documentclass[11pt,a4paper,toc=bibliography]{scrartcl}
 %Packages%
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
@@ -74,7 +74,9 @@
 \thispagestyle{empty}
 
 \newpage
+
 \tableofcontents
+
 \thispagestyle{empty}
 
 
@@ -1405,6 +1407,7 @@ Nun können wir den Begriff des topologischen Geschlechts definieren.
 	\]
 	Damit ist die Aussage bewiesen.
 \end{proof}
+\newpage
 %--------------------------------------------------------------------------------------------------%
 %------------------------NOTATIONSVERZEICHNIS---------------------------------------------------%%-------------------------------------------------------------------------------------------------%
 
@@ -1437,7 +1440,7 @@ $H^1(X,\mathcal{F})$ & 1. Kohomologiegruppe der Riemannschen Fläche $X$ bezügl
 $A\Subset B$ & $A$ liegt relativ kompakt in $B$\\
 $\mathfrak{V}\ll\mathfrak{V}$ & $\mathfrak{V}$ ist Schrumpfung von $\mathfrak{U}$  7\\
 \end{longtable}
-
+\newpage
 \bibliographystyle{alpha}
 \bibliography{bibliographie}
 \end{document}
